force-app/main/default/objects/AccountPlan/fields/bc_CorDestaque__c.field-meta.xml
<CustomField>
    <fullName>bc_CorDestaque__c</fullName>
    <label>Color Destaque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verde</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Rojo</fullName>
            </value>
            <value>
                <fullName>Azul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>