force-app/main/default/objects/AccountPlan/fields/bc_GrupoCuentas__c.field-meta.xml
<CustomField>
    <fullName>bc_GrupoCuentas__c</fullName>
    <label>Grupo de Cuentas</label>
    <referenceTo>bc_Group__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>AccountPlans</relationshipName>
    <type>Lookup</type>
</CustomField>